<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xp.smarthome.ui.SceneAddActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scene_add"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_name"
        android:textSize="14sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:background="@null"
        android:hint="@string/scene_name_hint"/>

    <TextView
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_mode"
        android:textSize="14sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"/>

    <RelativeLayout
        android:id="@+id/start_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:id="@+id/start_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="手动启动"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/forward"/>
    </RelativeLayout>

    <TextView
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_list"
        android:textSize="14sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/scene_task_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@android:color/white">
        <Button
            android:id="@+id/device_add_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/device_add"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_device_add_btn"/>

        <Button
            android:id="@+id/delay_add_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/delay_add"
            android:textSize="18sp"
            android:textColor="@color/colorGray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_delay_add_btn"/>
    </LinearLayout>
</LinearLayout>
