<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/equipment"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v4.view.ViewPager
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/aty_main_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/menu_button_add"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|right"/>
    </android.support.design.widget.CoordinatorLayout>

    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <com.seu.smarthome.widgt.TabItem
            app:image="@mipmap/tab_device"
            app:text="@string/equipment"
            android:id="@+id/tab_device"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"/>
        <com.seu.smarthome.widgt.TabItem
            app:image="@mipmap/tab_scene"
            app:text="@string/scene"
            android:id="@+id/tab_scene"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"/>
        <com.seu.smarthome.widgt.TabItem
            app:image="@mipmap/tab_my"
            app:text="@string/me"
            android:id="@+id/tab_my"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>



</LinearLayout>
