<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/household">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/device_add"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/grid_bg">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <Button
                    android:id="@+id/device_light_button"
                    android:layout_width="@dimen/grid_button_width"
                    android:layout_height="@dimen/grid_button_height"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_light"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/grid_bg">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <Button
                    android:id="@+id/device_feed_button"
                    android:layout_width="@dimen/grid_button_width"
                    android:layout_height="@dimen/grid_button_height"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/water"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_water"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/grid_bg">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <Button
                    android:id="@+id/device_water_button"
                    android:layout_width="@dimen/grid_button_width"
                    android:layout_height="@dimen/grid_button_height"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/pet"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_pet"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>



</LinearLayout>