<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time_task"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:clickable="false">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/start_time_task"
            android:textSize="18sp" />
        <Switch
            android:id="@+id/enable_time_task_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true"/>
        </RelativeLayout>

    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:id="@+id/time_task_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/start_time"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/start_time_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View
            android:background="@color/grey_gap"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/end_time"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/end_time_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="18sp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
        <View
            android:background="@color/grey_gap"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_repeat"
            android:textSize="18sp"
            android:padding="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <ToggleButton
                    android:layout_width="@dimen/round_button_radius"
                    android:layout_height="@dimen/round_button_radius"
                    android:background="@drawable/week_selector"
                    android:textOn="一"
                    android:textOff="一"
                    android:layout_margin="5dp"
                    android:checked="false" />
                <ToggleButton
                    android:layout_width="@dimen/round_button_radius"
                    android:layout_height="@dimen/round_button_radius"
                    android:background="@drawable/week_selector"
                    android:textOn="二"
                    android:textOff="二"
                    android:layout_margin="5dp"
                    android:checked="false" />
                <ToggleButton
                    android:layout_width="@dimen/round_button_radius"
                    android:layout_height="@dimen/round_button_radius"
                    android:background="@drawable/week_selector"
                    android:textOn="三"
                    android:textOff="三"
                    android:layout_margin="5dp"
                    android:checked="false" />
                <ToggleButton
                    android:layout_width="@dimen/round_button_radius"
                    android:layout_height="@dimen/round_button_radius"
                    android:background="@drawable/week_selector"
                    android:textOn="四"
                    android:textOff="四"
                    android:layout_margin="5dp"
                    android:checked="false" />
                <ToggleButton
                    android:layout_width="@dimen/round_button_radius"
                    android:layout_height="@dimen/round_button_radius"
                    android:background="@drawable/week_selector"
                    android:textOn="五"
                    android:textOff="五"
                    android:layout_margin="5dp"
                    android:checked="false" />
                <ToggleButton
                    android:layout_width="@dimen/round_button_radius"
                    android:layout_height="@dimen/round_button_radius"
                    android:background="@drawable/week_selector"
                    android:textOn="六"
                    android:textOff="六"
                    android:layout_margin="5dp"
                    android:checked="false" />
                <ToggleButton
                    android:layout_width="@dimen/round_button_radius"
                    android:layout_height="@dimen/round_button_radius"
                    android:background="@drawable/week_selector"
                    android:textOn="日"
                    android:textOff="日"
                    android:layout_margin="5dp"
                    android:checked="false" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>